# RaTeX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.swift  README.md  README.zh-CN.md  RELEASING.md  THIRD_PARTY_NOTICES.txt  roadmap.md
.claude/skills/golden-test-case/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release-android.yml  release-crates.yml  release-ios.yml  release-react-native.yml
crates/ratex-ffi/: Cargo.toml
crates/ratex-ffi/src/: lib.rs
crates/ratex-font/: Cargo.toml
crates/ratex-font/src/: font_id.rs  lib.rs  math_alpha.rs  metrics.rs
crates/ratex-font/src/data/: metrics_data.rs  symbols_data.rs
crates/ratex-layout/: Cargo.toml
crates/ratex-layout/src/: engine.rs  hbox.rs  katex_svg.rs  layout_box.rs  layout_options.rs  lib.rs  spacing.rs  stacked_delim.rs  surd.rs  to_display.rs  vbox.rs
crates/ratex-layout/tests/: layout_vs_katex.rs
crates/ratex-lexer/: Cargo.toml
crates/ratex-parser/: Cargo.toml
crates/ratex-parser/src/: environments.rs  error.rs  lib.rs  macro_expander.rs  parse_node.rs  parser.rs  tests.rs
crates/ratex-parser/src/functions/: char_cmd.rs  color.rs  def.rs  enclose.rs  horiz_brace.rs  htmlmathml.rs  mod.rs  op.rs  symbols_cmd.rs
crates/ratex-parser/src/mhchem/: actions.rs  mod.rs  patterns.rs
crates/ratex-parser/tests/: ce_line91_brace.rs
crates/ratex-render/: Cargo.toml
crates/ratex-render/src/: lib.rs  main.rs  renderer.rs  unicode_fallback.rs
crates/ratex-render/tests/: golden_test.rs
crates/ratex-svg/: Cargo.toml
crates/ratex-svg/src/: lib.rs  standalone.rs
crates/ratex-types/: Cargo.toml
crates/ratex-types/src/: color.rs  display_item.rs
crates/ratex-wasm/: Cargo.toml
crates/ratex-wasm/src/: lib.rs
demo/: benchmark.html  index.html  support_table.html
demo/android/: README.md  build.gradle.kts
demo/android/app/src/main/java/io/ratex/demo/: MainActivity.kt
demo/android/app/src/main/res/layout/: activity_main.xml
demo/android/app/src/main/res/values/: strings.xml
demo/flutter/android/app/src/main/: AndroidManifest.xml
demo/flutter/ios/Runner/: Info.plist
demo/flutter/lib/: main.dart
demo/ios/: README.md
demo/ios/RaTeXDemo/RaTeXDemo/: ContentView.swift  RaTeXDemoApp.swift
demo/ios/RaTeXDemo/RaTeXDemo.xcodeproj/: project.pbxproj
demo/jvm/: README.md
demo/react-native/: App.tsx  package-lock.json
demo/react-native/android/app/src/main/res/values/: strings.xml
demo/react-native/ios/RaTeXDemo/: Info.plist
demo/react-native/ios/RaTeXDemo.xcodeproj/: project.pbxproj
demo/web/: README.md  index.html  support_table.html
docs/: KATEX_SVG_PATH_PLAN.md  LOW_SCORE_CASES.md  PROJECT_STRUCTURE.md  TECH_SPEC.md
licenses/: KaTeX-fonts-NOTICE.txt
scripts/: install-hooks.sh  set-version.sh  update_golden_output.sh
skills/golden-test-case/: SKILL.md
tests/golden/: test_cases.txt
tools/: convert_metrics.py  convert_symbols.py  generate_website_formulas.mjs  katex_fontMetricsData.js  katex_symbols.ts
tools/benchmark/: formulas.json
tools/golden_compare/: compare_golden.py  generate_reference.mjs  package-lock.json  package.json
tools/layout_compare/: compare_layouts.py  katex_layout.mjs  package.json  test_cases_4_3.txt
tools/lexer_compare/: README.md  compare_lexers.py  katex_lex.mjs  package-lock.json  package.json
tools/parser_compare/: compare_parsers.py  katex_parse.mjs  node_modules  package.json  test_cases.txt
website/: astro.config.mjs  code.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  vite-plugin-platforms-web.mjs
website/public/: demo-live.js  demo-support-table.js  gallery.js  katex-fonts-link.js
website/public/data/: chemistry.json  math.json  physics.json
website/src/components/: GalleryPageIntro.astro  HeroPlayground.astro  SiteFooter.astro  SiteHeader.astro
website/src/data/: site.ts
website/src/i18n/: types.ts  utils.ts
website/src/i18n/locales/: en.ts  zh.ts
website/src/layouts/: BaseLayout.astro
website/src/pages/: chemistry.astro  demo.astro  get-started.astro  index.astro  math.astro  physics.astro
website/src/pages/demo/: live.astro  support-table.astro
website/src/pages/zh/: chemistry.astro  demo.astro  get-started.astro  index.astro  math.astro  physics.astro
website/src/pages/zh/demo/: live.astro  support-table.astro
