[workspace]
resolver = "2"
members = [
    "crates/ratex-types",
    "crates/ratex-font",
    "crates/ratex-lexer",
    "crates/ratex-parser",
    "crates/ratex-layout",
    "crates/ratex-ffi",
    "crates/ratex-render",
    "crates/ratex-wasm",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["RaTeX Contributors"]
license = "MIT"
repository = "https://github.com/erweixin/RaTeX"
homepage = "https://github.com/erweixin/RaTeX"
documentation = "https://github.com/erweixin/RaTeX#readme"

[workspace.dependencies]
ratex-types  = { path = "crates/ratex-types", version = "0.0.2" }
ratex-font   = { path = "crates/ratex-font", version = "0.0.2" }
ratex-lexer  = { path = "crates/ratex-lexer", version = "0.0.2" }
ratex-parser = { path = "crates/ratex-parser", version = "0.0.2" }
ratex-layout = { path = "crates/ratex-layout", version = "0.0.2" }

phf        = { version = "0.11", features = ["macros"] }
thiserror  = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
