[package]
name = "ratex-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "C ABI FFI exports for RaTeX"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ratex-types  = { workspace = true }
ratex-parser = { workspace = true }
ratex-layout = { workspace = true }
serde_json = { workspace = true }
