[package]
name = "ratex-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layout engine for RaTeX"

[dependencies]
ratex-types  = { workspace = true }
ratex-font   = { workspace = true }
ratex-parser = { workspace = true }
serde_json   = { workspace = true }

[[bin]]
name = "ratex-layout"
path = "src/bin/layout.rs"
