[package]
name = "ratex-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Layout engine for RaTeX"

[dependencies]
ratex-types  = { workspace = true }
ratex-font   = { workspace = true }
ratex-parser = { workspace = true }
serde_json   = { workspace = true }
serde         = { workspace = true }

[[bin]]
name = "ratex-layout"
path = "src/bin/layout.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
