[package]
name = "ratex-render"
version = "0.0.2"
edition = "2021"

[dependencies]
ratex-types = { path = "../ratex-types" }
ratex-font = { path = "../ratex-font" }
ratex-layout = { path = "../ratex-layout" }
ratex-parser = { path = "../ratex-parser" }
tiny-skia = "0.11"
ab_glyph = "0.2"
png = "0.17"
serde_json = "1"

[[bin]]
name = "render"
path = "src/main.rs"
