[package]
name = "ratex-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Raster and image rendering for RaTeX math typesetting"

[dependencies]
ratex-types = { workspace = true }
ratex-font = { workspace = true }
ratex-layout = { workspace = true }
ratex-parser = { workspace = true }
tiny-skia = "0.11"
ab_glyph = "0.2"
png = "0.17"
serde = { workspace = true }
serde_json = "1"
fontdb = { version = "0.23", features = ["std"] }
rust-embed = { workspace = true, optional = true }

[features]
## Embed font source files in binary. No need for font directory with this feature.
embed-fonts = ["dep:rust-embed"]

[[bin]]
name = "render"
path = "src/main.rs"

[[bin]]
name = "render-bitmap-batch"
path = "src/bin/render_bitmap_batch.rs"
