[package]
name = "ratex-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "RaTeX WASM bindings for browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
ratex-layout = { workspace = true }
ratex-parser = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
