[package]
name = "ratex-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "RaTeX WASM bindings for browser"

# Rust 1.87+ / LLVM 20 生成的 WASM 使用 bulk memory 等指令；wasm-opt 需显式启用对应特性
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ratex-layout = { workspace = true }
ratex-parser = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
